--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 								<h2 class="major">Christian's Resume</h2>
 
 
-								<span class="image fit"><img src="Resume_CHRISTIAN_FLORES_Minimalist.jpg" alt="" /></span>
+								<span class="image fit"><img src="Resume _CHRISTIAN_FLORES_Minimalist.jpeg" alt="" /></span>
 
 								<!--  <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
 								<p> </p>
