--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 													iSHELL K-band Survey of Class I and Flat Spectrum Sources:
 													Magnetic field measurements in the protostellar phase (2024 ApJ) </strong></li>
 													<p> </p>
-												<span class="image fit"><img src="images/Flores2024-fig1.jpeg" alt="" /></span>
+												<span class="image fit"><img src="images/Flores2024-fig1.pngß" alt="" /></span>
 												<p> </p>
 												<p> We performed the first magnetic field strength survey of Class I and Flat Spectrum (FS) sources using
 												K-band observations with iSHELL. We model the photospheric absorption lines of
